# InferDT

./: CMakeLists.txt  README.md
src/: infering.h
